# Weblet

./: README.md  pyproject.toml  setup.py
Weblet/: __init__.py  core.py
