[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "Weblet"
version = "1.0.0"
authors = [
  { name="BugFreeZone", email="r96177385@gmail.com" },
]
description = "Minimalist HTTP server library for Python with routing, middleware, HTTPS, templates, async, and multi-DB support"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/BugFreeZone/Weblet"
Issues = "https://github.com/BugFreeZone/Weblet/issues"
